2007-09-04  Mark Evenson <mark.evenson@gmx.at>

	* swank-abcl.lisp: Call accessors of compiler-condition at load
	time to work around some ABCL problems.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Move asdf support to contrib.

	* swank-backend.lisp (operate-on-system): Moved to
	swank-asdf.lisp. It wasn't specialized in any backend.

	* swank.lisp (operate-on-system-for-emacs)
	(list-all-systems-known-to-asdf, list-asdf-systems): Moved to
	swank-asdf.lisp.

	* slime.el: Move asdf commands to contrib slime-adsf.el.

	* swank-loader.lisp: Load swank-asdf if ASDF is in
	*FEATURES*. Also add the contrib source directory to
	swank::*load-path*.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move tramp support to contrib.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Move startup animation to contrib.

	* slime.el (slime-repl-banner-function): New hook.
	(slime-repl-update-banner): Use it and reset markers after calling
	it.
	(slime-set-default-directory): Don't call slime-repl-update-banner
	here.
	(slime-repl-insert-prompt): Set slime-repl-input-end-mark to
	point-max.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move inferior-slime-mode to contrib.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Fix the test suite (except for SBCL).

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Simplify slime-process-available-input.

	* slime.el (slime-process-available-input): We are called in a
	process filter, i.e. at arbitrary times and in an aribtrary
	buffer.  So it doesn't make sense to save-and-restore the current
	buffer here
	(slime-eval-async): Instead, save and restore the buffer here.
	(slime-net-read-or-lose): New.

2007-09-04  Helmut Eller  <heller@common-lisp.net>

	Remove request-abort condition.

	* swank-backend.lisp (request-abort): Removed
	(abort-request): Removed.  Replace all (3) uses with ERROR.
	* swank.lisp (eval-for-emacs): No special case for request-abort.